external-crates/move/crates/move-compiler/tests/move_check/parser/struct_type_missing_angle.exp
warning[W09006]: unused struct type parameter
  ┌─ tests/move_check/parser/struct_type_missing_angle.move:3:14
  │
3 │     struct S<T1, T2 { }
  │              ^^ Unused type parameter 'T1'. Consider declaring it as phantom
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09006]: unused struct type parameter
  ┌─ tests/move_check/parser/struct_type_missing_angle.move:3:18
  │
3 │     struct S<T1, T2 { }
  │                  ^^ Unused type parameter 'T2'. Consider declaring it as phantom
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_missing_angle.move:3:21
  │
3 │     struct S<T1, T2 { }
  │                     ^
  │                     │
  │                     Unexpected '{'
  │                     Expected ','

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_missing_angle.move:5:1
  │
3 │     struct S<T1, T2 { }
  │             - To match this '<'
4 │ }
5 │ 
  │ ^ Expected '>'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_missing_angle.move:5:1
  │
5 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected '{'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_missing_angle.move:5:1
  │
5 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

