external-crates/move/crates/move-compiler/tests/move_check/parser/struct_type_missing_angle.move
module 0x42::M {
    // Test a missing ">" after the type parameters.
    struct S<T1, T2 { }
}
